--- a/Index.html
+++ b/Index.html
@@ -71,7 +71,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2023 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Yogendra Kumar. All rights reserved.</p>
   </footer>
 </body>
 </html>
